# TraceDesk

./: .gitignore  README.md  design-qa.md  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
design-audit/: audit-notes.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionChart.tsx  ActionDistributionChart.tsx  ActionHistoryPanel.tsx  ActionTimelineStrip.tsx  ActivityFeed.tsx  ActivityGraph.tsx  ActivityToolbar.tsx  AppLogo.tsx  AppUsageChart.tsx  CopyableClipboardContent.tsx  (+12 more)
scripts/: open-installer.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/.tauri/: tracedesk.key.pub
src-tauri/bundle/macos/scripts/: postinstall
src-tauri/capabilities/: default.json  desktop.json
src-tauri/devpulse_bridge/: sitecustomize.py
src-tauri/icons/: icon.icns
src-tauri/src/: activity_emit.rs  activity_item.rs  checklist.rs  commands.rs  crm.rs  devpulse.rs  devpulse_secrets.rs  export.rs  lib.rs  main.rs  menu.rs  settings.rs  settings_commands.rs  state.rs  tray.rs
src-tauri/src/analytics/: bundle.rs  mod.rs  productivity.rs  summary.rs  weekly.rs
src-tauri/src/archive/: mod.rs
src-tauri/src/collector/: action_tests.rs  agent.rs  clipboard.rs  input.rs  input_bridge.rs  input_macos.rs  mod.rs  screenshot.rs  thumbnail.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  repository.rs
src-tauri/src/events/: activity.rs  mod.rs
src-tauri/src/llm/: client.rs  commands.rs  context.rs  mod.rs  secrets.rs
src-tauri/src/os/: linux.rs  macos.rs  macos_frontmost.rs  mod.rs  permissions.rs  windows.rs
src-tauri/src/system/: metrics.rs  metrics_tests.rs  mod.rs  ports.rs  ports_parse.rs
(+41 files in other folders)
